--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -28,6 +28,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style.css">
     {% block head %}{% endblock %}
+    
+    <!-- Analytics -->
+    <script data-goatcounter="https://stevelandey.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
     <main>
